# LifeBalanceAI

./: .gitattributes  .gitignore  DESIGN_BEAUTIFICATION_PLAN.md  README.md  UI_ASSESSMENT_REPORT.md  _all.py  _fixui.py  android_app_pid_log.txt  android_black_log.txt  android_final_log.txt  android_login_crash_stream.txt  android_ssl_ai_verify.txt  fix_final.py  setText
.config/: metrics.db-shm  metrics.db-wal  scheduled_recovery_state.json
LifeBalanceAI_demo/: .env.example  CMakeLists.txt  _final_verify.py  _s.py  aimanager.cpp  aimanager.h  animateddialog.cpp  animateddialog.h  approute.h  bottomnavbar.cpp  bottomnavbar.h  calendargridview.cpp  calendargridview.h  circularprogressbar.cpp  circularprogressbar.h  completionfeedback.cpp  completionfeedback.h  databasemanager.cpp  databasemanager.h  deepanalysisdialog.cpp  deepanalysisdialog.h  designtokens.h  feedbackdialog.cpp  feedbackdialog.h  loadingoverlay.cpp  loadingoverlay.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mobileshellcontroller.cpp  mobileshellcontroller.h  motionhelper.cpp  motionhelper.h  platformlayoutpolicy.cpp  platformlayoutpolicy.h  sidedrawer.cpp  sidedrawer.h  thememanager.cpp  thememanager.h  (+6 more)
LifeBalanceAI_demo/android/: AndroidManifest.xml
LifeBalanceAI_demo/models/: dto.h
LifeBalanceAI_demo/resources/: _s.py  export_report.py  resources.qrc  style.qss
LifeBalanceAI_demo/resources/licenses/: FONT_SOURCES.md
LifeBalanceAI_demo/services/: accountflowservice.cpp  accountflowservice.h  airesponseparser.cpp  airesponseparser.h  authflowservice.cpp  authflowservice.h  authsessionservice.cpp  authsessionservice.h  checkinservice.cpp  checkinservice.h  deepanalysisservice.cpp  deepanalysisservice.h  freezecardservice.cpp  freezecardservice.h  homeplanservice.cpp  homeplanservice.h  profileflowservice.cpp  profileflowservice.h  reportservice.cpp  reportservice.h  userservice.cpp  userservice.h
LifeBalanceAI_demo/tests/: test_accountflowservice.cpp  test_aikeystatus.cpp  test_airesponseparser.cpp  test_authflowservice.cpp  test_homeplanservice.cpp  test_profileflowservice.cpp  test_userservice_validation.cpp
docs/: ANDROID_BUILD_GUIDE.md  PROJECT_STRUCTURE.md  UI_REFACTOR_SUMMARY.md
docs/architecture/: auth-flow.md  mobile-main-path.md  module-boundaries.md  phase-11-2-safe-area-regression.md  phase-11-3-remaining-mobile-flows.md  phase-11-4-android-edge-to-edge-dialogs.md  phase-11-ui-polish-audit.md  phase-5-5-baseline.md  phase-6-6-baseline.md  phase-8-account-ai-feedback-baseline.md  phase-9-android-ai-key.md  profile-flow.md  refactor-roadmap.md
docs/archive/source-backups/20260528/: animateddialog.cpp  designtokens.h  main.cpp  mainwindow.cpp  mainwindow.h  motionhelper.cpp  style.qss
docs/archive/verification/: README.md
docs/archive/verification/reports/: DARKMODE_IMPLEMENTATION_REPORT.md  LifeBalanceAI_系统总体设计.docx  LifeBalance_AI_Dev_Manual_V2.0.docx  LifeBalance_AI_Dev_Manual_V3.0.docx  LifeBalance_AI_Requirement_Specification_V2.0.docx  PHASE1_COMPLETION_REPORT.md  PHASE2_COMPLETION_REPORT.md  UI_DESIGN_SPECIFICATION.md
docs/archive/verification/screenshots-and-logs/: android_ai_key_ui_check.txt  android_autologin_crash_clean.txt  android_black_after_patch_log.txt  android_crash_log.txt  android_crash_log_after_fix.txt  android_layout_verify2.txt  android_layout_verify3.txt  android_login_crash_short.txt  android_login_fixed_check.txt  android_width_fix_log.txt
docs/specs/: LifeBalanceAI_API接口调用知识点总结.docx  LifeBalance_AI_Requirement_Specification_V3.0.docx  README.md
docs/ui/: PHASE6_MOBILE_UI_POLISH_PLAN.md
screenshots/: README.md
tools/: android_push_env.ps1
tools/legacy/: LifeBalanceAI_demo__p.py  _chk.py  _fixh.py  _v.py  check_chars.py  fix_check.py  fix_dialog.ps1  fix_encoding.py  fix_patch.py  fix_v2.py
